@@ -39,6 +39,7 @@ LIST OF CHANGES
  - change components_as_products method of npg_pipeline::product to
    return a list with one item when there is only one component in
    the composition (instead of an empty list)
+ - tileviz index file with links to lane-level tileviz reports is created
 
 release 52.1
  - bug fix in jobs names where jobs name should include the pipeline
